@@ -10,7 +10,7 @@
 Trim sequences at k-mers of the given abundance, based on the given counting
 hash table.  Output sequences will be placed in 'infile.abundfilt'.
 
-% python scripts/filter-abund.py <counting.kh> <data1> [ <data2> <...> ]
+% python scripts/filter-abund.py <counting.ct> <data1> [ <data2> <...> ]
 
 Use '-h' for parameter help.
 """
@@ -37,8 +37,8 @@ def get_parser():
 
     Example::
 
-        load-into-counting.py -k 20 -x 5e7 table.kh data/100k-filtered.fa
-        filter-abund.py -C 2 table.kh data/100k-filtered.fa
+        load-into-counting.py -k 20 -x 5e7 table.ct data/100k-filtered.fa
+        filter-abund.py -C 2 table.ct data/100k-filtered.fa
     """
     parser = argparse.ArgumentParser(
         description='Trim sequences at a minimum k-mer abundance.',
